# OperatingSystems

./: README.md
1. CreateProcesses/: description.txt
1. CreateProcesses/Main/Creator/: Employee.h  creator.cpp
1. CreateProcesses/Main/Main/: main.cpp
1. CreateProcesses/Main/Reporter/: reporter.cpp
2. CreateThreads/CreateThreads/: CMakeLists.txt  functions.h  main.cpp  tests.cpp
2. CreateThreads/Main/: Main.sln
2. CreateThreads/Main/Main/: Main.cpp  Main.vcxproj
2. CreateThreads/Main/Main/x64/Debug/: Main.exe.recipe  Main.ilk  vc143.idb
3. Thread synchronization/: desription.txt
4. Process synchronization/: description.txt
4. Process synchronization/Receiver/: Receiver.sln
4. Process synchronization/Receiver/Main/: Main.vcxproj
4. Process synchronization/Receiver/Main/x64/Debug/: Main.exe.recipe  Main.ilk  vc143.idb
4. Process synchronization/Receiver/Receiver/: Receiver.cpp  Receiver.vcxproj
4. Process synchronization/Receiver/Receiver/x64/Debug/: Receiver.exe.recipe  Receiver.ilk  vc143.idb
4. Process synchronization/Receiver/Sender/: Sender.cpp  Sender.vcxproj
4. Process synchronization/Receiver/Sender/x64/Debug/: Sender.exe.recipe  Sender.ilk  vc143.idb
5. Named Pipes/: 5. Named Pipes.sln
5. Named Pipes/Client/: Client.cpp  Client.vcxproj  Client.vcxproj.filters
5. Named Pipes/Client/x64/Debug/: Client.exe.recipe  Client.ilk  vc143.idb
5. Named Pipes/Server/: Command.h  Server.cpp  Server.vcxproj  Server.vcxproj.filters  adsa.txt
5. Named Pipes/Server/x64/Debug/: Server.exe.recipe  Server.ilk  vc143.idb
(+45 files in other folders)
